feature: add start study session
